--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
@@ -22,5 +23,6 @@
     "mysql2": "^3.10.1",
     "nodemon": "^3.1.4",
     "uuid": "^10.0.0"
-  }
+  },
+  "devDependencies": {}
 }
